# phone-type

./: .gitignore  Cargo.toml  README.md  build.rs
data/: country_codes.json
examples/: e164_demo.rs
src/: lib.rs  serde_feature.rs
