[package]
name = "phone_type"
version = "0.2.0"
edition = "2021"
authors = ["johnteper <git@johnteper.me>"]
description = "Phone type for Rust"
homepage = "https://github.com/jonhteper/phone-type"
license = "MIT"
repository = "https://github.com/jonhteper/phone-type"
keywords = ["format", "types", "type", "phone", "cellphone"]

[dependencies]
phone-number-verifier = "1.0.1"
