[package]
name = "phone_type"
version = "1.0.0-beta.1"
edition = "2021"
authors = ["johnteper <git@johnteper.me>"]
description = "Phone type for Rust"
homepage = "https://github.com/jonhteper/phone-type"
license = "MIT"
repository = "https://github.com/jonhteper/phone-type"
keywords = ["format", "types", "type", "phone", "cellphone"]

[dependencies]
regex = "1.11.2"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "2.0.16"
phf = { version = "0.11", features = ["macros"], optional = true }

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

[features]
serde = ["dep:serde"]
e164 = ["dep:phf"]
default = []
